# application

./: README.md  app.py  cluster_report.sh  metrics_resources.sh  recalculate_baselines.sh  woop_report.sh
AI_proxy/: .claudeignore  .codex_session  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  mempalace.yaml  pyproject.toml
AI_proxy/.tmp/: import_check.out  new_style.css  pytest.out
AI_proxy/app/: __init__.py  auth.py  batch.py  config.py  control_plane.py  main.py  model_aliases.py  observability.py  policy_engine.py  pricing.py  prompt_intel.py  registry.py  reliability.py  routing.py  runtime_config.py  schemas.py  search.py  secrets.py  tags.py  webui.py
AI_proxy/app/providers/: anthropic.py  azure.py  base.py  cohere.py  mock.py  ollama.py  openai.py  router.py
AI_proxy/app/storage/: __init__.py  base.py  clickhouse.py  clickhouse_runtime_config.py  memory.py  redis_store.py
AI_proxy/app/webui_assets/: chart.jsx  data.js  i18n.js  icons.jsx  light-theme.css  panels.jsx  provider_table.jsx  shell.jsx  styles.css  views.jsx
AI_proxy/data/: runtime_config.json
AI_proxy/docs/: roadmap.md
AI_proxy/k8s/: clickhouse-external-service.yaml  clickhouse-installation.yaml  llm-control-plane-deployment.yaml  llm-control-plane-ingress.yaml  llm-control-plane-secret.yaml  llm-gate-deployment.yaml  llm-gate-ingress.yaml  llm-gate-namespace.yaml  ollama-external-service.yaml
AI_proxy/tests/: test_auth.py  test_control_plane.py  test_main_api.py  test_policy_engine.py  test_provider_router.py  test_reliability.py  test_routing.py
