[project]
name = "llm-control-plane"
version = "0.1.0"
description = "A centralized LLM control plane with routing, policy, reliability, and observability primitives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
storage = [
  "clickhouse-connect>=0.8.0,<1.0.0",
  "redis>=5.0.0,<6.0.0",
]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
